--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     hostname: namenode
 
 # Сначала запусти меня
-#    command: ["hdfs", "namenode", "-format", "-force"]
+    # command: ["hdfs", "namenode", "-format", "-force"]
 # А уже потом спокойно запускай меня
     command: ["hdfs", "namenode"]
     env_file:
@@ -79,7 +79,7 @@ services:
       target: hive_hadoop
     hostname: metastore
     # Сначала запусти меня
-    #    command: ["schematool", "--dbType", "postgres", "--initSchema"]
+    # command: ["schematool", "--dbType", "postgres", "--initSchema"]
     # А уже потом спокойно запускай меня
     command: [ "hive", "--service", "metastore" ]
     environment:
@@ -136,9 +136,59 @@ services:
 #      - ./hive_conf:/opt/hive/conf
 #    command: ["bash", "/opt/zeppelin/bin/zeppelin.sh"]
 
-networks:
-  default:
-    name: yohoho
+
+  jobmanager:
+    build: .
+    image: pyflink/pyflink:1.16.0-scala_2.12
+    volumes:
+      - ./flink_data:/opt/pyflink
+    hostname: "jobmanager"
+    expose:
+      - "6123"
+    ports:
+      - "8081:8081"
+    command: jobmanager
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=jobmanager
+  taskmanager:
+    image: pyflink/pyflink:1.16.0-scala_2.12
+    volumes:
+    - ./flink_data:/opt/pyflink
+    expose:
+      - "6121"
+      - "6122"
+    depends_on:
+      - jobmanager
+    command: taskmanager
+    links:
+      - jobmanager:jobmanager
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=jobmanager
+  zookeeper:
+    image: wurstmeister/zookeeper:3.4.6
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:2.13-2.8.1
+    ports:
+      - 29092:29092
+    depends_on:
+      - zookeeper
+    environment:
+      HOSTNAME_COMMAND: "route -n | awk '/UG[ \t]/{print $$2}'"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: EXTERNAL_SAME_HOST://:29092,INTERNAL://:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,EXTERNAL_SAME_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL_SAME_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+
+# networks:
+#   default:
+#     name: yohoho
 
 volumes:
   hive-db:
